<resources>
    <string name="details_back">Back</string>
    <string name="details_more_options">More options</string>
    <string name="details_notes_save_failed_message">Couldn\'t save your notes</string>
    <string name="details_retry">Retry</string>
    <string name="details_status_update_failed">Couldn\'t update the status</string>
    <string name="details_collections">Collections</string>
    <string name="details_no_collections">Not in any collection</string>
    <string name="details_collections_hint">Group papers for a chapter, a course or a project.</string>
    <string name="details_new_collection">New collection</string>
    <string name="details_copy_apa">Copy APA 7 citation</string>
    <string name="details_copy_ieee">Copy IEEE citation</string>
    <string name="details_copy_bibtex">Copy BibTeX</string>
    <string name="details_apa_copied">APA citation copied</string>
...
    <string name="details_copy_failed">Couldn\'t copy the citation</string>
    <string name="details_collections_update_failed">Couldn\'t update collections</string>
    <string name="details_pdf">PDF</string>
    <string name="details_pdf_available">Available to download</string>
    <string name="details_pdf_none">No PDF</string>
    <string name="details_pdf_download">Download PDF</string>
    <string name="details_pdf_read">Read PDF</string>
    <string name="details_doi">DOI</string>
    <string name="details_pdf_attach">Attach PDF</string>
    <string name="details_pdf_replace">Replace PDF</string>
    <string name="details_pdf_remove">Remove PDF</string>
    <string name="details_pdf_cancel">Cancel</string>
    <string name="details_pdf_progress">%1$s of %2$s</string>
...
